--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3896,4 +3896,9 @@ input, select, textarea {
 
 	.intro p, .intro ul, .intro a{
 		font-size: 18px;
+		font-weight: 400;
+	}
+
+	.items a{
+		font-weight: 600;
 	}
